--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
-show_downloads: true
+title: Jacob's Portfolio of Cybersecurity Projects
+description: To showcase my skills to future employers
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
